Add all chrimes

--- a/form.html
+++ b/form.html
@@ -12,10 +12,58 @@
     <div class="container">
         <form id="jpm_form" action="" method="get">
             <div id="insubordinacion">
-                <h2>Insubordinación</h2>
+                <h2 class="chrime_title">Insubordinación</h2>
             </div>
             <div id="insubordinacion_exigencia">
-                <h2>Insubordinación por exigencia</h2>
+                <h2 class="chrime_title">Insubordinación por exigencia</h2>
+            </div>
+            <div id="desobediencia">
+                <h2 class="chrime_title">Desobediencia</h2>
+            </div>
+            <div id="desobediencia_personal_retirado">
+                <h2 class="chrime_title">Desobediencia de personal retirado</h2>
+            </div>
+            <div id="desobediencia_reservistas">
+                <h2 class="chrime_title">Desobediencia de reservistas</h2>
+            </div>
+            <div id="ataque_superior">
+                <h2 class="chrime_title">Ataque al superior</h2>
+            </div>
+            <div id="amenazas">
+                <h2 class="chrime_title">Amenazas</h2>
+            </div>
+            <div id="abandono_puesto">
+                <h2 class="chrime_title">Abandono del puesto</h2>
+            </div>
+            <div id="abandono_servicio">
+                <h2 class="chrime_title">Abandono del servicio</h2>
+            </div>
+            <div id="abandono_servicio_soldados_voluntarios_profesionales">
+                <h2 class="chrime_title">Abandono del servicio de soldados voluntarios o profesionales</h2>
+            </div>
+            <div id="delito_centinela">
+                <h2 class="chrime_title">Delito del centinela</h2>
+            </div>
+            <div id="libertad_indebida_prisioneros_guerra">
+                <h2 class="chrime_title">Libertad indebida de prisioneros de guerra</h2>
+            </div>
+            <div id="omision_abastecimiento">
+                <h2 class="chrime_title">Omisión en el abastecimiento</h2>
+            </div>
+            <div id="inutilizacion_voluntaria">
+                <h2 class="chrime_title">Inutilización voluntaria</h2>
+            </div>
+            <div id="cobardia">
+                <h2 class="chrime_title">Cobardía</h2>
+            </div>
+            <div id="cobardia_omision">
+                <h2 class="chrime_title">Cobardía por omisión</h2>
+            </div>
+            <div id="comercio_enemigo">
+                <h2 class="chrime_title">Comercio con el enemigo</h2>
+            </div>
+            <div id="injuria">
+                <h2 class="chrime_title">Injuria</h2>
             </div>
             <button>Guardar Respuestas</button>
         </form>
