Add url parameter functionality

--- a/form.html
+++ b/form.html
@@ -69,9 +69,13 @@
         </form>
     </div>
 
-    
+    <!-- Fetch data -->
     <script src="./js/fetch.js"></script>
+
+    <!-- Print fields logic -->
     <script src="./js/printFields.js"></script>
-    
+
+    <!-- Get params to show chrimes -->
+    <script src="./js/params.js"></script>
 </body>
 </html>
