Change atribute names on fetch

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
             <div id="insubordinacion">
                 <h2 class="chrime_title">Insubordinación</h2>
             </div>
-            <!-- <div id="insubordinacion_exigencia">
+             <div id="insubordinacion_exigencia">
                 <h2 class="chrime_title">Insubordinación por exigencia</h2>
             </div>
             <div id="desobediencia">
@@ -64,7 +64,7 @@
             </div>
             <div id="injuria">
                 <h2 class="chrime_title">Injuria</h2>
-            </div> -->
+            </div>
             <button>Guardar Respuestas</button>
         </form>
     </div>
