--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@
                 <h2 class="chrime_title">Abandono del servicio</h2>
             </div>
             <div id="abandono_servicio_soldados_voluntarios_profesionales">
-                <h2 class="chrime_title">Abandono del servicio de soldados voluntarios o profesionales</h2>
+                <h2 class="chrime_title">ABANDONO DEL SERVICIO DE SOLDADOS VOLUNTARIOS O PROFESIONALES</h2>
             </div>
             <div id="delito_centinela">
                 <h2 class="chrime_title">Delito del centinela</h2>
@@ -64,6 +64,9 @@
             </div>
             <div id="injuria">
                 <h2 class="chrime_title">Injuria</h2>
+            </div>
+            <div id="desercion">
+                <h2 class="chrime_title">Deserción</h2>
             </div>
             <button>Guardar Respuestas</button>
         </form>
