Change attribute values from JSON

--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <form id="jpm_form" data-msg_id="4545" action="" method="get">
+        <form id="jpm_form" data-msg_id="98989888" action="" method="get">
             <div id="insubordinacion">
                 <h2 class="chrime_title">Insubordinación</h2>
             </div>
