Add new JSON structure

--- a/form.html
+++ b/form.html
@@ -75,6 +75,12 @@
     <!-- Fetch data -->
     <script src="./js/fetch.js"></script>
 
+    <script>
+        fetchChcrime().then(chrimes => {
+            console.log(chrimes)
+        })
+    </script>
+
     <!-- Print fields logic -->
     <script src="./js/buildFields.js"></script>
     <script src="./js/submit.js"></script>
