Get children from parent id, sort it and print it

--- a/form.html
+++ b/form.html
@@ -29,6 +29,9 @@
             <div id="ataque_superior">
                 <h2 class="chrime_title">Ataque al superior</h2>
             </div>
+            <div id="ataque_inferior">
+                <h2 class="chrime_title">Ataque al inferior</h2>
+            </div>
             <div id="amenazas">
                 <h2 class="chrime_title">Amenazas</h2>
             </div>
