Add success popup and fixed submit button

--- a/form.html
+++ b/form.html
@@ -4,17 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.16/dist/sweetalert2.min.css">
     <title>JPM</title>
 </head>
 
 <body>
 
     <div class="container">
-        <form id="jpm_form" data-msg_id="98989888" action="" method="get">
-            
-            <!-- <button>Guardar Respuestas</button> -->
-        </form>
+        <form id="jpm_form" data-msg_id="98989888" action="" method="get"></form>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.16/dist/sweetalert2.all.min.js"></script>
 
     <!-- Fetch data -->
     <script src="./js/fetch.js"></script>
@@ -25,7 +25,5 @@
     <script src="./js/printFields.js"></script>
     <script src="./js/triggers.js"></script>
 
-    <!-- Get params to show chrimes -->
-    <!-- <script src="./js/params.js"></script> -->
 </body>
 </html>
