Print form fields

--- a/form.html
+++ b/form.html
@@ -14,6 +14,8 @@
         <form id="jpm_form" data-msg_id="98989888" action="" method="get"></form>
     </div>
 
+    <div id="jpm_form_text"></div>
+
     <script src="./js/sweetalert2.all.min.js"></script>
 
     <!-- Fetch data -->
@@ -21,6 +23,7 @@
 
     <!-- Print fields logic -->
     <script src="./js/buildFields.js"></script>
+    <script src="./js/printSentForm.js"></script>
     <script src="./js/submit.js"></script>
     <script src="./js/printFields.js"></script>
     <script src="./js/triggers.js"></script>
